# ImageToASCII

./: CMakeLists.txt  README.md
src/Header/: Util.h
src/Source/: Main.cpp  Util.cpp
